# numfys

fractal_drum/: Cargo.toml
fractal_drum/py/: analysis.py  fractal_generator.py  grid.py  main.py  plotty.py  solver.py
fractal_drum/report/: report.md
fractal_drum/src/: fractal_generator.rs  grid.rs  main.rs  plotty.rs
fractal_drum_jl/: fractal_generator.py  grid.py  main.py  plotty.py  solver.py
magwav/: .gitignore  Cargo.toml  README.md
magwav/rapport/: rapport.md
magwav/scripts/: afm_plot_fft.py  bz_plot_fft_of_x_component.py  mag_plot_fft.py  plot_fft_of_x_component.py  plot_x_components.py  sketch_omega.py  t_avg_mag.py
magwav/src/: main.rs  plotty.rs  system.rs
smumerix/: Cargo.toml
smumerix/ex1/: ex3.py  ex4.py  test_4.py
smumerix/ex1/report/: report.md
smumerix/smumerix/: smumerix.pyi
smumerix/src/: lib.rs
smumerix/src/bindings/: edg.rs  random_walk.rs
smumerix/src/core/edg/: mod.rs  tests.rs
src/: main.rs
