[package]
name = "fractal_drum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
eigenvalues = "0.4.0"
lapack = "0.19.0"
nalgebra = "0.32.2"
# nalgebra-lapack = "0.24.0"
nalgebra-sparse = "0.9.0"
ndarray = "0.15.6"
ndarray-linalg = {version="0.16.0", features=["intel-mkl-static"]}
plotters = { path = "../plotters/plotters" }
sprs = "0.11.0"
sprs-ldl = "0.10.0"
timeit = "0.1.2"
