[package]
name = "magwav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
nalgebra = "0.32.1"
plotters = { path = "../plotters/plotters" }
rand = "0.8.5"
rand_distr = "0.4.3"
# plotters = { git = "https://github.com/iverks/plotters" }
# plotters = "0.3.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
