[package]
name = "magwav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
nalgebra = "0.32.1"
ndarray = "0.15.6"
plotters = { path = "../plotters/plotters" }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.156"
serde_json = "1.0.94"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
